# simple-road-following-app

assets/greengrassModelSync/: mlModelSync.py
assets/scripts/: jetbot_bringup.sh  prep_launch_local.sh  set_wifi.sh
robot_ws/src/jetbot_app/: CMakeLists.txt  package.xml  setup.py
robot_ws/src/jetbot_app/launch/: run.launch
robot_ws/src/jetbot_app/nodes/: run.py
robot_ws/src/jetbot_app/scripts/: run_app.sh  run_dino.sh
