<?xml version="1.0"?>
<package format="2">
  <name>jetbot_app</name>
  <version>1.2.0</version>
  <description>
    Simple Dino Detect App
  </description>
  <license>MIT</license>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
</package>
